--------------------------------------------------------------------------------------------------
Release notes version 1.7.6_beta : Enhancements, modifications and corrected bugs since version 1.7.5 :
--------------------------------------------------------------------------------------------------
18/10/17 (TRUST)  New keyword : Add quiet option in k-eps RANS turbulence model to disable printing of information about k and epsilon
11/10/17 (TRUST)  New keyword : Upper limitation of epsilon for k-eps RANS turbulence model (eps_max)
26/09/17 (TRUST)  Major change: Adding columns into diffusion_chaleur.face (and debit.face into VDF) files for flux by face using imprimer_flux keyword
12/09/17 (TRUST)  Minor change: Value of ideal gas constant in Quasi_Compressible model R=8.3143J/mol/K
31/08/17 (TRUST)  New feature : Introduce no_verify option (Usage: trust MyJDD.data -no_verify)
21/08/17 (TRUST)  Validation  : Blocking turbulent quasi-compressible calculation with mass fraction in VEF
29/06/17 (TRUST)  Bug fixed   : Taking into account the name of the thermal power defined by Champ_Input_P0
--------------------------------------------------------------------------------------------------
Release notes version 1.7.5 : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------
29/05/17 (TRUST)  New feature : Extraction method possible on 1D mesh
16/05/17 (TRUST)  Minor change: Option -config completed with gedit editor
25/04/17 (Tools)  Minor change: Options -edit, -xedit and -xcheck added to the trust script (EDITEUR, EditData and VerifData)
25/04/17 (TRUST)  Major change: Adding a stop test for unique implicit time scheme in coupled problem with QC
30/03/17 (Tools)  New feature : New python script to convert into Ensight format (Lata_to_case.py)