@@ -61,6 +61,7 @@ Read fluide
         loi_etat Melange_gaz_parfait {
                 Prandtl 0.70610687022900753274
 		Sc 1.                
+		ignore_check_fraction
         }
 	traitement_pth constant
 }
