@@ -62,6 +62,7 @@ Read fluide
         loi_etat Melange_gaz_parfait {
                 Prandtl 0.71034351145038165942
                 Sc 0.8
+                dtol_fraction 1.e-5
         }
 	traitement_pth constant
 }
