@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.7.6_beta : Enhancements, modifications and corrected bugs since version 1.7.5 :
 --------------------------------------------------------------------------------------------------
+20/10/17 (TRUST)  New keyword : Delta tolerance on mass fractions for check testing in state law for mixing of perfect gas (dtol_fraction)
 18/10/17 (TRUST)  New keyword : Add quiet option in k-eps RANS turbulence model to disable printing of information about k and epsilon
 11/10/17 (TRUST)  New keyword : Upper limitation of epsilon for k-eps RANS turbulence model (eps_max)
 26/09/17 (TRUST)  Major change: Adding columns into diffusion_chaleur.face (and debit.face into VDF) files for flux by face using imprimer_flux keyword
